--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 </head>
 <body>
+
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
   <div class="container-fluid justify-content-between">
     <div class="d-flex">
@@ -28,7 +29,7 @@
 <nav class="navbar navbar-expand-sm navbar-light ">
   <div class="container-fluid  justify-content-between">
     <ul class="nav justify-content-start">
-      <img class="ms-5 bigger-image me-4" src="nike%20logo.jpg" alt="ni">
+      <img class="ms-5 bigger-image me-4" src="nike logo.jpg" alt="ni">
     </ul>
     <ul class="nav align-items-center">
       <div class="font px-4">New & Featured</div>
@@ -55,7 +56,6 @@
     <li class = "font3 text-center w-100"><a href="" style="color: black;">Shop Now</a></li>
   </ul>
 </nav>
-
 
 <img class="img-fluid rounded mx-auto d-block" src="nike.png" alt="nike">
 </body>
